[gd_scene load_steps=3 format=3 uid="uid://blohkbwwwpgap"]

[ext_resource type="Script" uid="uid://dgoiip3yar1km" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
anti_aliasing = false

[node name="Main" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ig7tw")
script = ExtResource("1_ig7tw")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Inputs" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Players" type="VBoxContainer" parent="VBox/Inputs"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Inputs/Players"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "^TEXT.PLAYERS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Field" type="LineEdit" parent="VBox/Inputs/Players"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
placeholder_text = "^PLHD.PLAYERS"

[node name="Time" type="VBoxContainer" parent="VBox/Inputs"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Inputs/Time"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "^TEXT.TOTAL_TIME"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Fields" type="HBoxContainer" parent="VBox/Inputs/Time"]
layout_mode = 2

[node name="Days" type="LineEdit" parent="VBox/Inputs/Time/Fields"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "^PLHD.DAYS"

[node name="Hours" type="LineEdit" parent="VBox/Inputs/Time/Fields"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "^PLHD.HOURS"

[node name="Minutes" type="LineEdit" parent="VBox/Inputs/Time/Fields"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "^PLHD.MINUTES"

[node name="Displays" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 6

[node name="Rate" type="HBoxContainer" parent="VBox/Displays"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/Displays/Rate"]
layout_mode = 2
size_flags_horizontal = 3
text = "^TEXT.RATE"
vertical_alignment = 1

[node name="Number" type="Label" parent="VBox/Displays/Rate"]
layout_mode = 2
size_flags_horizontal = 3
text = "^FORMAT.INVALID"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeft" type="HBoxContainer" parent="VBox/Displays"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/Displays/TimeLeft"]
layout_mode = 2
size_flags_horizontal = 3
text = "^TEXT.TIME"
vertical_alignment = 1

[node name="Number" type="Label" parent="VBox/Displays/TimeLeft"]
layout_mode = 2
size_flags_horizontal = 3
text = "^FORMAT.INVALID"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Calculate" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "^BTN.CALCULATE"

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Clear" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "^BTN.CLEAR"

[node name="Restore" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "^BTN.RESTORE"

[node name="Exit" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "^BTN.EXIT"

[connection signal="pressed" from="VBox/Calculate" to="." method="_on_calculate_button_pressed"]
[connection signal="pressed" from="VBox/Buttons/Clear" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBox/Buttons/Restore" to="." method="_on_restore_button_pressed"]
[connection signal="pressed" from="VBox/Exit" to="." method="_on_exit_button_pressed"]
